--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       upload_artefacts:
-        description: "Upload build artefacts for this run"
+        description: "Upload build artefacts"
         type: boolean
         required: false
         default: false
@@ -18,7 +18,7 @@ on:
           - "Debug Release"
           - "Debug Minimal"
           - "Debug Full"
-          
+
   # Triggers the workflow when called by a top-level workflow
   workflow_call:
     inputs:
