--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -34,6 +34,14 @@ on:
 env:
   # Path to the solution file relative to the root of the project.
   SOLUTION_FILE_PATH: RTEA.sln
+  EXECUTABLE_NAME: "Cortex Command.exe"
+  NAME_MAPPING: '{
+    "Final": "Cortex Command.exe",
+    "Debug Release": "Cortex Command.debug.release.exe",
+    "Debug Minimal": "Cortex Command.debug.minimal.exe",
+    "Debug Full": "Cortex Command.debug.full.exe"
+    }'
+  
 
 jobs:
   build:
@@ -42,6 +50,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
+    - run: |
+      echo "EXECUTABLE_NAME=${{ fromJson(${{env.NAME_MAPPING}})[${{inputs.build_configuration}}] }}" >> "$GITHUB_ENV"
 
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1
@@ -56,6 +67,6 @@ jobs:
       if: ${{inputs.upload_artefacts}}
       uses: actions/upload-artifact@v3
       with:
-        name: Cortex Command.exe
-        path: D:/a/Cortex-Command-Community-Project-Source/Cortex-Command-Community-Project-Data/Cortex Command.exe
+        name: ${{env.EXECUTABLE_NAME}}
+        path: D:/a/Cortex-Command-Community-Project-Source/Cortex-Command-Community-Project-Data/${{env.EXECUTABLE_NAME}}
         if-no-files-found: error
