--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -34,13 +34,7 @@ on:
 env:
   # Path to the solution file relative to the root of the project.
   SOLUTION_FILE_PATH: RTEA.sln
-  EXECUTABLE_NAME: "Cortex Command.exe"
-  NAME_MAPPING: '{
-    "Final": "Cortex Command.exe",
-    "Debug Release": "Cortex Command.debug.release.exe",
-    "Debug Minimal": "Cortex Command.debug.minimal.exe",
-    "Debug Full": "Cortex Command.debug.full.exe"
-    }'
+  NAME_MAPPING: '{\"Final\": \"Cortex Command.exe\", \"Debug Release\": \"Cortex Command.debug.release.exe\", \"Debug Minimal\": \"Cortex Command.debug.minimal.exe\", \"Debug Full\": \"Cortex Command.debug.full.exe\"}'
   
 
 jobs:
@@ -51,9 +45,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - run: |
-      echo "EXECUTABLE_NAME=${{ fromJson(${{env.NAME_MAPPING}})[${{inputs.build_configuration}}] }}" >> "$GITHUB_ENV"
-
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1
 
@@ -63,10 +54,16 @@ jobs:
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration="${{inputs.build_configuration}}" ${{env.SOLUTION_FILE_PATH}}
 
+
+    - id: executable_name
+      if: ${{inputs.upload_artefacts}}
+      run: |
+        echo "EXECUTABLE_NAME=${{ fromJson(env.NAME_MAPPING)[inputs.build_configuration] }}" >> "$GITHUB_OUTPUT"
+
     - name: Upload Artifact
       if: ${{inputs.upload_artefacts}}
       uses: actions/upload-artifact@v3
       with:
-        name: ${{env.EXECUTABLE_NAME}}
-        path: D:/a/Cortex-Command-Community-Project-Source/Cortex-Command-Community-Project-Data/${{env.EXECUTABLE_NAME}}
+        name: ${{ steps.executable_name.outputs.EXECUTABLE_NAME }}
+        path: D:/a/Cortex-Command-Community-Project-Source/Cortex-Command-Community-Project-Data/${{ steps.executable_name.outputs.EXECUTABLE_NAME }}
         if-no-files-found: error
