--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -58,7 +58,7 @@ jobs:
       id: executable_name
       if: ${{inputs.upload_artefacts}}
       run: |
-        echo 'EXECUTABLE_NAME=${{ fromJson(env.NAME_MAPPING)[inputs.build_configuration] }}' >> "$GITHUB_OUTPUT"
+        echo "EXECUTABLE_NAME=${{ fromJson(env.NAME_MAPPING)[inputs.build_configuration] }}" >> "$GITHUB_OUTPUT"
     
     - run: |
         echo ${{ steps.executable_name.outputs.EXECUTABLE_NAME }}
