--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -66,10 +66,10 @@ jobs:
       id: executable_name
       if: ${{inputs.upload_artefacts}}
       run: |
-        echo -e "EXECUTABLE_NAME=${{ fromJson(env.NAME_MAPPING)[inputs.build_configuration] }}" >> "$GITHUB_ENV"
+        echo "EXECUTABLE_NAME=${{ fromJson(env.NAME_MAPPING)[inputs.build_configuration] }}" >> "$GITHUB_ENV"
     
     - run: |
-        echo ${{ env.EXECUTABLE_NAME }}
+        echo "${{ env.EXECUTABLE_NAME }}"
 
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1
