--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -67,9 +67,11 @@ jobs:
       if: ${{inputs.upload_artefacts}}
       run: |
         echo "EXECUTABLE_NAME=${{ fromJson(env.NAME_MAPPING)[inputs.build_configuration] }}" >> "$GITHUB_ENV"
-    
+      shell: bash
+
     - run: |
         echo "${{ env.EXECUTABLE_NAME }}"
+      shell: bash
 
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1
