force bash shells

--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -58,18 +58,22 @@ jobs:
     - name: Set color
       id: random-color-generator
       run: echo "SELECTED_COLOR=green" >> $GITHUB_OUTPUT
+      shell: bash
       
     - name: Get color
       run: echo "The selected color is ${{ steps.random-color-generator.outputs.SELECTED_COLOR }}"
+      shell: bash
 
     - name: Determine executable name
       id: executable_name
       if: ${{inputs.upload_artefacts}}
       run: |
         echo "EXECUTABLE_NAME=${{ fromJson(env.NAME_MAPPING)[inputs.build_configuration] }}" >> "$GITHUB_ENV"
-    
+      shell: bash
+
     - run: |
         echo "${{ env.EXECUTABLE_NAME }}"
+      shell: bash
 
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1
