--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -34,13 +34,6 @@ on:
 env:
   # Path to the solution file relative to the root of the project.
   SOLUTION_FILE_PATH: RTEA.sln
-  # NAME_MAPPING: |
-  #   "{"Final\": \"Cortex Command.exe\",
-  #    \"Debug Release\": \"Cortex Command.debug.release.exe\",
-  #    \"Debug Minimal\": \"Cortex Command.debug.minimal.exe\",
-  #    \"Debug Full\": \"Cortex Command.debug.full.exe\"}"
-  EXECUTABLE_NAME: "Cortex Command.exe"
-
   NAME_MAPPING: |
     {"Final": "Cortex Command.exe",
     "Debug Release": "Cortex Command.debug.release.exe",
@@ -55,26 +48,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set color
-      id: random-color-generator
-      run: echo "SELECTED_COLOR=green" >> $GITHUB_OUTPUT
-      shell: bash
-      
-    - name: Get color
-      run: echo "The selected color is ${{ steps.random-color-generator.outputs.SELECTED_COLOR }}"
-      shell: bash
-
-    - name: Determine executable name
-      id: executable_name
-      if: ${{inputs.upload_artefacts}}
-      run: |
-        echo "EXECUTABLE_NAME=${{ fromJson(env.NAME_MAPPING)[inputs.build_configuration] }}" >> "$GITHUB_ENV"
-      shell: bash
-
-    - run: |
-        echo "${{ env.EXECUTABLE_NAME }}"
-      shell: bash
-
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1
 
@@ -83,6 +56,13 @@ jobs:
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration="${{inputs.build_configuration}}" ${{env.SOLUTION_FILE_PATH}}
+
+    - name: Determine executable name
+      id: executable_name
+      if: ${{inputs.upload_artefacts}}
+      run: |
+        echo "EXECUTABLE_NAME=${{ fromJson(env.NAME_MAPPING)[inputs.build_configuration] }}" >> "$GITHUB_OUTPUT"
+      shell: bash
 
     - name: Upload Artifact
       if: ${{inputs.upload_artefacts}}
