Fix macOS workflow runs not finding the debug version of the executable when uploading artefacts
Add an extended glob pattern to match either of them if present (trailing `_debug`)

--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -149,5 +149,5 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: CortexCommand (macOS)
-          path: build/CortexCommand
+          path: build/CortexCommand*(_debug)
           if-no-files-found: error
