--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -149,5 +149,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: CortexCommand (macOS)
-          path: build/CortexCommand*(_debug)
+          path: |
+            build/CortexCommand
+            build/CortexCommand_debug
           if-no-files-found: error
